example/errors/interpret/indexing_wrong_type.box
set ğŸ¥³: int = 5;

println(ğŸ¥³[3] as str);
